# doc-search-engine

./: LICENSE  README.md  analyze_rn.py  download_all_rn.py  fetch_rn_csv.py  find_csv.py  find_products.py  index_pdf.py  index_rn.py  probe_rn.py  pyproject.toml  pyproject.toml.bak  reindex_pdf.py  reindex_rn.py
docs/superpowers/plans/: 2026-05-19-pdf-chassis-guides.md
skill/: doc-search-engine.md
src/doc_search_engine/: build.py  cli.py  db.py  index.py  parse.py  parse_markdown.py  parse_pdf.py  pdf_index.py  products.py  rn.py  schema.sql  search.py  server.py
src/doc_search_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_build_db.py  test_cli.py  test_db_metadata.py  test_index.py  test_index_report.py  test_parse_fixtures.py  test_parse_markdown.py  test_parse_pdf.py  test_pdf_index.py  test_products.py  test_rn.py  test_search.py  test_server_errors.py
